--- a/text/s2-c09-rebasing.textile
+++ b/text/s2-c09-rebasing.textile
@@ -10,7 +10,7 @@ If we do a simple merge, our history will look like this:
 
 !bitmap/repo.png!
 
-But we don't want to mess up our history with a bunch of branches and merges when it can be clearer.  Instead of running 'git merge story84' from the master branch, we can stay in the 'story84' branch and run 'git rebase master'
+But we don't want to mess up our history with a bunch of branches and merges when it can be clearer.  Instead of running @git merge story84@ from the master branch, we can stay in the 'story84' branch and run @git rebase master@
 
 shell. rebase-conflict.txt
 
@@ -18,11 +18,11 @@ Many times this goes very smoothly and you can see all the new commits and trees
 
 This gives us some options, since the rebase can do this at any point - say you have 8 commits to move onto the new branch - each one could cause a conflict and you will have to resolve them each manually.  The 'rebase' command will stop at each patch if it needs to and let you do this.  
 
-You have three things you can do here, you can either fix the file, run a 'git add' on it and then run a 'git rebase --continue', which will move on to the next patch until it's done.  Our second option is to run 'git rebase --abort', which will reset us to what our repo looked like before we tried the rebase. Or, we can run 'git rebase --skip', which will leave this one patch out, abandoning the change forever.
+You have three things you can do here, you can either fix the file, run a @git add@ on it and then run a @git rebase --continue@, which will move on to the next patch until it's done.  Our second option is to run @git rebase --abort@, which will reset us to what our repo looked like before we tried the rebase. Or, we can run @git rebase --skip@, which will leave this one patch out, abandoning the change forever.
 
 note.  Git rebase options for a conflict : *--continue* : tries to keep going once you've resolved it, *--abort* : gives up altogether and returns to the state before the rebase, *--skip* : skips this patch, abandoning it forever
 
-In this case we will simply fix the conflict, run 'git add' on the file and then run 'git rebase --continue' which then makes our history look like this:
+In this case we will simply fix the conflict, run @git add@ on the file and then run @git rebase --continue@ which then makes our history look like this:
 
 !bitmap/repo3.png!
 
@@ -33,13 +33,13 @@ Then all we have to do is switch to the master branch and merge in 'story84' (wh
 
 h3. Interactive Rebasing
 
-Much like Git provides a nicer way to work with your index before committing with 'git add --interactive', there is an interactive rebasing option that can only be fairly described as the "bee's knees".
+Much like Git provides a nicer way to work with your index before committing with @git add --interactive@, there is an interactive rebasing option that can only be fairly described as the "bee's knees".
 
-Assume we have started working on a story to add the 'git add' functionality to our library and so we've started a new branch called 'story92' and done the work there.  Then we decide that the 'ls-tree' function needs to be recursive and make that change, then we tweak the library again, committing each time. Meanwhile we've pulled in a change that implements the same 'ls-tree' change differently into our 'master' branch.  
+Assume we have started working on a story to add the @git add@ functionality to our library and so we've started a new branch called 'story92' and done the work there.  Then we decide that the 'ls-tree' function needs to be recursive and make that change, then we tweak the library again, committing each time. Meanwhile we've pulled in a change that implements the same 'ls-tree' change differently into our 'master' branch.  
 
 !bitmap/repo-rebasei1.png!
 
-We can see before we try the merge that the same change is in each branch, and I can see that the master branch version is better, so I don't even really want to merge it, I just want to throw my change away.  Also, I don't really need the other two commits to be two commits, because the second one is just a tweak and should be included in the first one.  Lets use 'git rebase -i' to rebase this branch and make those changes.  When we run the command, our editor comes up, showing this:
+We can see before we try the merge that the same change is in each branch, and I can see that the master branch version is better, so I don't even really want to merge it, I just want to throw my change away.  Also, I don't really need the other two commits to be two commits, because the second one is just a tweak and should be included in the first one.  Lets use @git rebase -i@ to rebase this branch and make those changes.  When we run the command, our editor comes up, showing this:
 
 code. repo-rebase.txt
 
