Change contraction "it's" to possessive "its"
The last sentence had a contraction of "it is" where the possessive "its" should have been used.

--- a/text/s1-c01-what-is-git.textile
+++ b/text/s1-c01-what-is-git.textile
@@ -8,4 +8,4 @@ note. "In many ways you can just see git as a filesystem — it's content-addres
   
 When most SCMs store a new version of a project, they store the code delta or diff.  When Git stores a new version of a project, it stores a new _tree_ - a bunch of blobs of content and a collection of pointers that can be expanded back out into a full directory of files and subdirectories.  If you want a diff between two versions, it doesn't add up all the deltas, it simply looks at the two trees and runs a new diff on them.
 
-This is what fundamentally allows the system to be easily distributed - it doesn't have issues figuring out how to apply a complex series of deltas, it simply transfers all the directories and content that one user has and another does not have but is requesting.  It is efficient about it - it only stores identical files and directories once and it can compress and transfer its content using delta-compressed packfiles - but in concept, it is a very simple beast.  Git is at it's heart very stupid-simple.
+This is what fundamentally allows the system to be easily distributed - it doesn't have issues figuring out how to apply a complex series of deltas, it simply transfers all the directories and content that one user has and another does not have but is requesting.  It is efficient about it - it only stores identical files and directories once and it can compress and transfer its content using delta-compressed packfiles - but in concept, it is a very simple beast.  Git is at its heart very stupid-simple.
